fix background for filter buttons on Windows, align sorting options with filter options

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,7 +7,7 @@
 }
 
 .sort-options {
-  padding-left: 2vw;
+  padding-left: 20px;
   padding-bottom: 3vh;
   color: #44505C;
   font-weight: 500;
