--- a/src/css/filterOptions.css
+++ b/src/css/filterOptions.css
@@ -34,6 +34,7 @@ i.gray {
   text-align: left;
   color: #565656;
   cursor: pointer;
+  background-color: white;
 }
 
 .filter-style-option:focus {
